<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="on_boarding_title1">쑥쑥 크는 우리 아이</string>
    <string name="on_boarding_body1">가족과 함께 하루에 한 장\n아이의 성장을 기록해요!</string>
    <string name="on_boarding_title2">행복한 시간을 함께</string>
    <string name="on_boarding_body2">가족과 지인을 초대해 소식을 공유하고,\n이야기를 나눠볼까요?</string>
    <string name="on_boarding_title3">속닥속닥, 우리끼리</string>
    <string name="on_boarding_body3">같은 그룹인 경우에만 댓글이 보여요!\n편하게 대화를 나누어요 :)</string>
    <string name="baba_start">시작하기</string>
    <string name="baba_login_title">바바에서\n추억을 기록해요</string>
    <string name="baba_login_body">아이와 함께 성장을 기록해요</string>
    <string name="baba_terms_description">로그인 시 바바 개인정보처리방침,\n이용약관에 동의합니다.</string>
    <string name="baba_terms_loading_failed">이용약관을 불러오는것에 실패 했습니다.</string>
    <string name="baba_terms_agree_failed">이용약관 동의 과정에서 문제가 발생했습니다.</string>
    <string name="kakao_login_canceled">카카오 로그인이 취소되었습니다.</string>
    <string name="baba_login_failed">로그인에 실패했습니다. 다시 한번 확인해 주세요</string>
    <string name="baba_sign_up_failed">회원가입에 실패했습니다.</string>
    <string name="baba_network_failed">네트워크 연결을 확인해주세요</string>
    <string name="baba_get_member_failed">사용자 정보를 가져오는 데에 실패했습니다.</string>
    <string name="baba_name">바바</string>
    <string name="create_profile">프로필 생성</string>
    <string name="modify">수정</string>
    <string name="modifying">수정 중</string>
    <string name="sign_up_greeting1">반가워요☺</string>
    <string name="sign_up_greeting2">나와 아이, 가족의 성장을 기록하는 바바에 오신 걸 환영해요!</string>
    <string name="please_input_name">바바에서 사용할 이름을 입력해주세요.\n[마이]에서 변경 가능해요."</string>
    <string name="please_select_profile_icon">프로필을 선택해봐요.\n[마이]에서 변경 가능해요.</string>
    <string name="baba_greeting_1">안녕😄</string>
    <string name="baba_greeting_2">반가워, 바바!</string>
    <string name="send">전송</string>
    <string name="can_enter_up_to_10_chars">최대 10자 입력 가능해요</string>
    <string name="see_term_content"><u>보기</u></string>
    <string name="term_1">이용약관 동의</string>
    <string name="term_2">개인정보 수집 및 이용 동의</string>
    <string name="agree_all_terms">약관 전체 동의</string>
    <string name="baba_ask">문의하기</string>
    <string name="next">다음</string>
    <string name="essential">[필수]</string>
    <string name="choice">[선택]</string>
    <string name="required_terms_acceptance">필수 약관이 모두 동의 되지 않았습니다.</string>
    <string name="app_name">BaBa</string>
    <string name="take_photo">Take Photo</string>
    <string name="android_permission_camera_title">카메라 권한이 필요합니다.</string>
    <string name="android_permission_camera_description">이 앱은 카메라에 대한 접근 권한이 필요합니다. 카메라를 사용하여 아이의 오늘을 기록해보세요 </string>
    <string name="android_permission_camera_denied_description">이 앱은 카메라에 대한 접근 권한이 필요합니다. 설정 - 애플리케이션 정보 에서 권한을 동의하시겠습니까?</string>
    <string name="android_permission_denied_title">Permission Denied</string>
    <string name="open_setting">Open Setting</string>
    <string name="crop_image">사진 자르기</string>
    <string name="complete">완료</string>
    <string name="btn_capture">사진 촬영, 사진 제목 작성 창으로 이동</string>
    <string name="btn_toggle">카메라 화면 전환</string>
    <string name="btn_album"> 앨범으로 이동</string>
    <string name="btn_crop_complete"> Crop 완료, 사진 제목 작성 창으로 이동</string>
    <string name="btn_write_title_complete"> 사진 제목 작성 완료, 카드 선택 창으로 이동</string>
    <string name="iv_final_post">마지막 아기 사진</string>
    <string name="can_not_find_date">날짜를 불러올 수 없습니다.</string>
    <string name="type_title">제목을 입력하세요</string>
    <string name="write_title_guide">최대 10글자 입력 가능</string>
    <string name="save">저장</string>
    <string name="select_frame">프레임 선택</string>
    <string name="today">Today</string>
    <string name="card_basic_1">기본</string>
    <string name="card_sky_1">하늘</string>
    <string name="card_cloud_1">구름1</string>
    <string name="card_cloud_2">구름2</string>
    <string name="card_toy_1">장난감</string>
    <string name="card_candy_1">알사탕</string>
    <string name="card_snowflower_1">눈꽃1</string>
    <string name="card_snowflower_2">눈꽃2</string>
    <string name="card_line_1">스트라이프</string>
    <string name="card_spring_1">스프링</string>
    <string name="card_check_1">체크1</string>
    <string name="card_check_2">체크2</string>
    <string name="iv_item_card">카드 선택할 때 아이템 이미지 뷰</string>
    <string name="likes_and_comment">좋아요와 댓글을 달아봐요!</string>
    <string name="iv_select_card_guide">카드 선택 창에서는 가이드용(실제 상호작용 없음)</string>
    <string name="post_album_entity_too_large">사진의 용량이 너무 큽니다.</string>
    <string name="post_album_failed">사진 업로드에 실패했습니다.</string>
    <string name="post_album_unexpected_result">알 수 없는 오류로 사진 업로드에 실패했습니다.</string>
    <string name="create_profile_complete">프로필 생성 완료</string>
    <string name="view_by_date">날짜별 보기</string>
    <string name="album_card_record_image">기록하기를 눌러 사진을 남겨 봐요</string>
    <string name="past_album_title">%s의 지난 성장</string>
    <string name="today_album_title">%s의 오늘 기록</string>
    <string name="input_children_info">아이 정보 기입</string>
    <string name="check_have_invite_code">초대코드를 받으셨나요?</string>
    <string name="babies_info_by_invite_code">%s의 %s이시군요!</string>
    <string name="answer_yes">응, 맞아</string>
    <string name="answer_no">아니</string>
    <string name="need_to_baby_info">추억을 기록하기 전 아이의 정보가 필요해요!</string>
    <string name="what_is_the_name_of_baby">기록할 아이의 이름이 무엇인가요?</string>
    <string name="baba_unknown_error">동작에 문제가 발생했습니다.</string>
    <string name="baba_token_empty_error">토큰 확인에 문제가 발생했습니다.</string>
    <string name="album_not_found_error">앨범을 확인할 수 없습니다.</string>
    <string name="monday"> 월</string>
    <string name="tuesday"> 화</string>
    <string name="wednesday"> 수</string>
    <string name="thursday"> 목</string>
    <string name="friday"> 금</string>
    <string name="saturday"> 토</string>
    <string name="sunday"> 일</string>
    <string name="baby_info_error">아이의 정보가 잘못 입력되었습니다. 다시 한번 입력해 주세요</string>
    <string name="invite_code_error">초대코드가 올바르지 않습니다. 다시 확인해 주세요</string>
    <string name="input_more_baby_info">또 기록하고 싶은 아이가 있나요?</string>
    <string name="relation_mom">엄마</string>
    <string name="relation_dad">아빠</string>
    <string name="relation_other">직접 입력</string>
    <string name="input_baby_birthday">아이의 생일 혹은 출산 예정일이  언제인가요? 📆</string>
    <string name="input_more_baby">또 기록하고 싶은 아이가 있나요?</string>
    <string name="input_relation">아이와 어떤 관계이신가요?</string>
    <string name="please_input_invite_code">초대코드를 보내주세요</string>
    <string name="input_end_babies_info">좋아요!\n아래 버튼을 눌러 시작해봐요!</string>
    <string name="add_comment">%s에게 댓글달기</string>
    <string name="album_like_count">좋아요 %d개</string>
    <string name="album_comment_tag">\@%s</string>
    <string name="user_info_collect_complete">정보 수집 완료!</string>
    <string name="welcome_baba">어서와요, %s님</string>
    <string name="collapse">모아보기</string>
    <string name="growth_album">성장 앨범</string>
    <string name="my_page">마이 페이지</string>
    <string name="select_baby">성장앨범 보러가기</string>
    <string name="management_babies">아이 추가 및 관리</string>
    <string name="baby_add_complete">아이가 추가되었어요!</string>
    <string name="add_baby_title">아이 추가하기</string>
    <string name="save_your_memories">소중한 추억을 기록해봐요 :)</string>
    <string name="service_description">바바(BABA)는 \n 양육자를 위한 성장다이어리입니다.\n 아이의 성장을 기록하고, 지인과 소통하며 행 \n 복한 육아를 경험하길 바랍니다.</string>
    <string name="service_info">서비스 정보</string>
    <string name="ask">문의하기</string>
    <string name="delete_member">회원탈퇴</string>
    <string name="creator">서비스 제작자</string>
    <string name="add_button">추가하기</string>
    <string name="manage_kids">아이 관리</string>
    <string name="copy_invite_code">초대코드 복사하기</string>
    <string name="invite_kakaotalk">카카오톡으로 초대하기</string>
    <string name="check">확인</string>
    <string name="set_profile">프로필 설정</string>
    <string name="delete_baby">아이 삭제</string>
    <string name="email_info">문의 이메일 정보</string>
    <string name="baba_email"><u>baba.service.care@gmail.com</u></string>
    <string name="delete_warning">계정을 삭제시 모든 데이터가 삭제되며\n 복구되지 않습니다.</string>
    <string name="manage_baby">아이 관리</string>
    <string name="baby_group">아이 그룹</string>
    <string name="can_check_group">소식을 확인할 수 있는 아이 그룹입니다.</string>
    <string name="can_add_20_people">*최대 20명 추가 가능</string>
    <string name="illust">일러스트</string>
    <string name="edit_member">멤버 편집</string>
    <string name="relation_with_baby">아이와 관계</string>
    <string name="group_in">소속 그룹</string>
    <string name="mother_family">외가</string>
    <string name="add">추가하기</string>
    <string name="babys">아이들</string>
    <string name="baby">아이</string>
    <string name="you_can_check_baby">등록된 아이의 소식을 확인할 수 있어요</string>
    <string name="record_album">성장을 기록해봐요</string>
    <string name="no_albums_recorded">쉿! 아직 자고있어요</string>
    <string name="add_like_and_comment">좋아요와 댓글을 달아봐요!</string>
    <string name="delete_comment">삭제</string>
    <string name="calendar_date">%d.%02d</string>
    <string name="baba_get_album_failed">앨범을 불러오는 것에 실패했습니다.</string>
    <string name="baba_get_babies_failed">아기 리스트를 불러오는 것에 실패했습니다.</string>
    <string name="baba_babies_empty">등록된 아이들이 없습니다.</string>
    <string name="baba_like_album_failed">좋아요 요청이 실패했습니다.</string>
    <string name="baba_album_delete_failed">앨범 삭제에 실패했습니다.</string>
    <string name="baba_photo_download_failed">사진을 다운로드를 실패했습니다.</string>
    <string name="baba_add_comment_failed">댓글추가 요청이 실패했습니다.</string>
    <string name="baba_delete_comment_failed">댓글삭제 요청이 실패했습니다.</string>
    <string name="group_groupname">[%s]그룹과 소식을 공유할 수 있어요</string>
    <string name="item_month_baby_img">아기 월별로 모아보기 이미지</string>
    <string name="item_year_baby_img">아기 년도별로 모아보기 이미지</string>
    <string name="item_all_baby_img">아기 전체 모아보기 이미지</string>
    <string name="item_all_baby_text" tools:ignore="TypographyDashes">23-01-30</string>
    <string name="unit_of_count">%d장</string>
    <string name="classified_with_month">월별</string>
    <string name="classified_with_year">년도별</string>
    <string name="all">전체</string>
    <string name="classified_album_detail_title" tools:ignore="ExtraTranslation">2023–01</string>
    <string name="unknown_error_msg">알 수 없는 이유로 실패</string>
    <string name="login_request">로그인 후 다시 시도 해주세요</string>
    <string name="invalid_invite_code">유효하지 않은 초대코드입니다.</string>
    <string name="family_setting">가족 설정</string>
    <string name="save_photo">사진 저장하기</string>
    <string name="delete_album">게시물 삭제</string>
    <string name="report_album">이미지 신고하기</string>
    <string name="delete_album_answer">게시물을 삭제하시겠습니까?\n사진과 댓글, 좋아요가 삭제됩니다</string>
    <string name="report_album_answer">이미지를 신고하시겠습니까?</string>
    <string name="report">신고하기</string>
    <string name="delete">삭제하기</string>
    <string name="cancel">취소</string>
    <string name="save_photo_noti_title">다운로드 완료</string>
    <string name="save_photo_noti_body">사진이 저장 되었습니다.</string>
    <string name="comment_delete">댓글 삭제</string>
    <string name="invite_member">멤버 초대</string>
    <string name="edit">편집</string>
    <string name="family_group_description">모든 그룹과 소식을 공유할 수 있어요</string>
    <string name="my_group_description">%s, %s의 소식만 볼 수 있어요</string>
    <string name="name">이름</string>
    <string name="family_name">가족 이름</string>
    <string name="group_name">그룹 이름</string>
    <string name="make_group_text">그룹 만들기</string>
    <string name="delete_group">그룹 삭제</string>
    <string name="load_group_error_message">그룹 정보를 불러올 수 없습니다.</string>
    <string name="load_baby_error_message">아이 정보를 불러올 수 없습니다.</string>
    <string name="load_my_info_error_message">내 정보를 불러올 수 없습니다.</string>
    <string name="cannot_delete_myself">계정을 삭제하려면 우측 상단 설정에서 해야 합니다.</string>
    <string name="add_baby_banner_title">내 아이를 추가해봐요</string>
    <string name="add_baby_banner_description">직접 성장앨범을 기록할 아이를 만들어요</string>
    <string name="baby_name">아이 이름</string>
    <string name="relation_between_me_and_baby">나와 아이의 관계</string>
    <string name="relation_between_me_and_baby_description">현재 나의 아이가 있는 경우, 사용하고 있는 관계명을 적어주세요.</string>
</resources>