<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kids.baba.mobile.presentation.viewmodel.AlbumConfigViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_photo"
            style="@style/BABA.AlbumConfigBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/save_photo"
            android:textAppearance="@style/BABA.TextStyle.AlbumConfigBtnStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_delete_album" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_album"
            style="@style/BABA.AlbumConfigBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/delete_album"
            android:onClick="@{() -> viewModel.albumDelete()}"
            android:textColor="@color/baba_sub_9"
            android:textAppearance="@style/BABA.TextStyle.AlbumConfigBtnStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_photo"
            app:layout_constraintBottom_toTopOf="@id/btn_report_album" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_report_album"
            style="@style/BABA.AlbumConfigBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/report_album"
            android:textAppearance="@style/BABA.TextStyle.AlbumConfigBtnStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/baba_sub_9"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_album"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>