<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kids.baba.mobile.presentation.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.LoginFragment">
        <ImageView
            android:id="@+id/iv_baba_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baba_logo_reverse"
            android:layout_marginStart="30dp"
            android:layout_marginTop="158dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_title"
            android:textAppearance="@style/BABA.TextStyle.H1"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/baba_login_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_baba_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_baba_logo" />

        <TextView
            android:id="@+id/tv_login_body"
            android:textAppearance="@style/BABA.TextStyle.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            android:text="@string/baba_login_body"
            android:textColor="@color/text_0"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <ImageButton
            android:id="@+id/btn_kakao_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:onClick="@{() -> viewModel.loginWithKakao()}"
            android:src="@drawable/kakao_login_medium_wide"
            app:layout_constraintBottom_toTopOf="@+id/tv_terms_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_terms_description"
            style="@style/BABA.TextStyle.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="@string/baba_terms_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>