<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kids.baba.mobile.presentation.viewmodel.SelectCardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_select_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_camera"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:shadowColor="@color/black"
                android:textSize="16sp"
                app:buttonGravity="center_vertical"
                app:navigationIcon="@drawable/ic_back_gray_round"
                app:title="@string/select_frame"
                app:titleCentered="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_album"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/format_round_corner_blue"

                    android:contentDescription="@string/btn_album"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/fl_baby_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ab_select_card"
            app:layout_constraintBottom_toTopOf="@+id/rv_frames"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"

            >

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_frames"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_baby_frame"
            android:layout_marginBottom="50dp"
            >

        </androidx.recyclerview.widget.RecyclerView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
